--- a/thesis.tex
+++ b/thesis.tex
@@ -206,6 +206,7 @@ linkcolor=blue, citecolor=blue, urlcolor=blue]{hyperref}
 %Backmatter
 
 \appendix
+\include{backmatter/00_acronyms}
 \include{backmatter/03_patch}
 \include{backmatter/01_formats}
 \include{backmatter/02_example_gtp}
