--- a/backmatter/03_patch.tex
+++ b/backmatter/03_patch.tex
@@ -7,9 +7,9 @@
 
 As was mentioned in the "Approach" chapter (\ref{cha:approach}), in a real 5G Campus deployment the messages between either the RAN nodes- or the UPF- and the WAN Connector will be carrying GTP packets. In order for the tc-cake traffic shaper in the linux kernel to be able to detect the packets being tunneled, a custom BPF flow dissector must be used \footnote{https://www.kernel.org/doc/html/v5.1/networking/bpf\_flow\_dissector.html\#overview}.
 
-The linux kernel's source code provides a very simple example of a dissector which removes the tunnel headers for various protocols, e.g. Generic Routing Encapsulation (GRE) or IP in IP tunneling (IPIP). Unfortunately a GTP dissector is not included in this set, but it is a very simple patch to add the required functionality to the kernel.
+The linux kernel's source code provides a simple example of a dissector which removes the tunnel headers for various protocols, e.g. Generic Routing Encapsulation (GRE) or IP in IP tunneling (IPIP). Unfortunately a GTP dissector is not included in this set, but it is a straightforward patch to add the required functionality to the kernel.
 
-The listing \ref{lst:patch} shows a patch for the example file given in the linux kernel \footnote{https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git/tree/tools/testing/selftests/bpf/progs/bpf\_flow.c?h=3006adf3be79cde4d14b1800b963b82b6e5572e0}. This patch constitutes an important part of this thesis' contribution because without it, a realistic deployment of the proposed system would not be possible, because the traffic shaper would not function.
+The listing \ref{lst:patch} shows a patch for the example file included in the linux kernel \footnote{https://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git/tree/tools/testing/selftests/bpf/progs/bpf\_flow.c?h=3006adf3be79cde4d14b1800b963b82b6e5572e0}. This patch constitutes an important part of this thesis' contribution because without it, a realistic deployment of the proposed system would not be possible, because the traffic shaper would not function.
 
 \clearpage
 
