restructuring + final review of chaps 1 3 4 and half of 5

--- a/backmatter/00_acronyms.tex
+++ b/backmatter/00_acronyms.tex
@@ -4,7 +4,6 @@
 \chapter{Acronyms}
 \begin{description}
 
-
 \item[3GPP] 3rd Generation Public Partnership Project
 \item[CAKE] Common Applications Kept Enhanced 
 \item[eBPF] enhanced Berkeley Packet Filter
@@ -21,7 +20,8 @@
 \item[IP] Internet Protocol
 \item[IPv4] Internet Protocol version 4
 \item[IPv6] Internet Protocol version 6
-\item[ISP] Internet Service Provider 
+\item[ISP] Internet Service Providerovider 
+\item[LAN] Local Area Network
 \item[LEO] Lower Earth Orbit
 \item[LTE] Long Term Evolution
 \item[MNO] Mobile Network Operator
@@ -45,6 +45,8 @@
 \item[UPF] User Plane Function 
 \item[VoIP] Voice over IP
 \item[WAN] Wide Area Network
+\item[WiFi] Wireless Fidelity
+\item[WLAN] Wireless Local Area Network
 \item[WSN] Wireless Sensor Network
 
 
