--- a/mainmatter/04_approach.tex
+++ b/mainmatter/04_approach.tex
@@ -1,49 +1,74 @@
 %!TEX root = ../thesis.tex
 
 \cleardoublepage
-\chapter{Approach}
-\label{cha:approach}
+\chapter{Requirements}
+\label{cha:requirements}
 
-To discuss the solution implemented for this thesis requires a review of, firstly, the requirements contained in the problem statement, and, secondly, a description of both the decisions made as well as the process behind making those decisions. To that extent, this chapter will discuss, the components needed in order to address the problem statement. It will try to discuss not only what decisions were made, but also, crucially, what decisions were \textit{not} made, and why. The first section will begin with the fundamental nature of the solution's architecture, thereafter a review of the design requirements which arise from the Deterministic Networking specification will follow, finally the precise nature of the solution's internal workings will be presented.
+%To discuss the solution implemented for this thesis requires a review of, firstly, the requirements contained in the problem statement, and, secondly, a description of both the decisions made as well as the process behind making those decisions. To that extent, this chapter will discuss, the components needed in order to address the problem statement. It will try to discuss not only what decisions were made, but also, crucially, what decisions were \textit{not} made, and why. The first section will begin with the fundamental nature of the solution's architecture, thereafter a review of the design requirements which arise from the Deterministic Networking specification will follow, finally the precise nature of the solution's internal workings will be presented.
 
-\section{Requirements}
 
-Concretely, a multipath backhaul solution, as has been described in the introduction, will need to be able to transport the 5G traffic from the edge deployment to the core, while respecting the traffic's QoS requirements. This breaks down into a short list of hard requirements.
+To discuss the solution implemented for this thesis requires a review of, firstly, the requirements contained in the problem statement. Concretely, a multipath backhaul solution, as was described in the introduction, will need to be able to transport the 5G traffic from the edge deployment to the core, while respecting the traffic's QoS requirements. On the condition that this must occur in the presence of more than one backhaul option, this breaks down the problem into a short list of hard requirements.
 
 \begin{enumerate}
-  \item Forward only the appropriate traffic (as is defined in the 5G flow descriptions)
-  \item Manage multiple outgoing paths
-  \item Co-ordinate flows and their requirements with the Control Plane
-  \item Select the best path to enable the flow's requirements and achieve determinism
+  \item Flow Identification
+
+
+This is a simple requirement but implementing it efficiently can be a challenge \cite{tongaonkar2004fast}. Flow identification is a basic and unavoidable requirement for this system. All IP packets the WAN Connector receives must be identified and mapped to their appropriate Flow Descriptions. A flow description may match one or more flows, but any single flow should only ever map back to one flow description. Though it is possible for a flow to match more than one flow description, in these instances a tiebreaker can be used: either whichever flow description was seen first or whichever has the higher priority. Packets from flows which do not match any description must be dropped. Packets for flows matching a flow description will need the QoS requirements of the flow description to be upheld.
+
+
+  \item Management of Multiple Outgoing Paths
+
+Both the WAN Connector in the core and the one in the remote 5G Campus must be able to co-ordinate about their available interfaces and/or IP addresses. By doing so they should be able to determine how many paths there are between them. Furthermore it is desirable to perform path management and observe the paths' characteristics. These characteristics are the bandwidth, jitter, latency, packet loss, as well as status (i.e. if the path is completely broken). A path's characteristics are also not guaranteed to be symmetric so path's will have to be managed based on their direction as well. This requires a complex degree of co-ordination between the remote WAN Connector instances. 
+
+  \item Path Selection in Pursuit of Determinism
+
+It is not enough just to map incoming packets to their QoS requirements, these must also be enforced to as high a degree as possible.  Determinism means that a flow can expect it's QoS to be upheld, provided the network is physically able to do so. As long as some path exists which has a latency less than that required by the flow, then the flow's latency requirements should be met. The same applies to packet loss, jitter, and bandwidth. This also means if there are two paths with sufficiently low jitter and delay, and one of them is down, then the flow should be switched to the other path, or it should be replicated across both paths so that one path going down is not even noticeable.
+
+This is the core building block of this work. Although the previous requirements are all unavoidable, they are all in service of this requirement. It should also be clarified at this point that a flow with QoS requirements which the WAN Connector deems unattainable may be rejected. This does not constitute failure, provided the WAN Connector has correctly deduced that the backhaul paths are all truly insufficient in their current state.
+
+\item Packet Tunneling to Remote Destination
+
+With the flow identification, path management, and path selection all in place, the incoming packets must still be tunneled to the terminating WAN Connector, which forwards them on to their destination. This is the final requirement of such a system. After incoming packets are mapped to a flow, and the path on which that flow should be forwarded has been chosen (based on the data collected about those paths), the packets must still be sent across one of the backhaul paths. Crucially, the flow's source and destination should not have to be aware of the WAN Connector, this means packets must arrive unchanged.
+
 \end{enumerate} 
+
+%%=========================================
+%%=========================================
+%%=========================================
+\cleardoublepage
+\chapter{Design}
+\label{cha:design}
+
+This chapter reviews the ways in which the requirements of the previous chapter can be met. It will discuss, the components needed in order to address the problem statement. It will try to discuss not only what decisions were made, but also, crucially, what decisions were \textit{not} made, and why. The first section will begin with the fundamental structure of the solution's architecture, thereafter an overview of the functionality required will be given. The Deterministic Networking specification will heavily inform these choices, and is referenced repeatedly throughout this chapter.
+
 
 %%=========================================
 \section{Skeleton Structure}
 \label{sec:approach:plan}
 
-At the outset of this thesis it was decided to use a Control User Plane split. The packet processing and forwarding is performed in the user plane, and the control plane makes the high level decisions about which packets to send where, and in this case, on which outgoing interface to send them. The data plane is kept simple and only performs the time critical packet processing, and blindly follows the instructions of the control plane. This type of architecture is very common in modern software-based networks, for example OpenFlow, the Evolved Packet Core (from LTE), and the 5G core all implement this kind of Control-Data-Plane split.
+From the outset it was decided to use a Control-User Plane split. The packet processing and forwarding is performed in the user plane, and the control plane makes the high level decisions about which packets to send where, and in this case, on which outgoing interface to send them. The data plane is simple and only performs the time critical packet processing, and blindly follows the instructions of the control plane. This type of architecture is common in modern software-based networks, for example OpenFlow, the Evolved Packet Core (from LTE), and the 5G core all implement this kind of Control-Data-Plane split.
 
-However, this decision immediately locks one into certain positions. For example, this requires a method of communication between the data plane and the control plane, it also means the state machine that represents the WAN Connector becomes more complex, and complexity always brings with it a greater danger for hidden mistakes and fallacies. The benefit is that the user plane function does not need to perform any of its own decisions, thus simplifying its internal architecture, and these components can be deployed at different locations, and scaled up or out with greater ease.
+However, this decision immediately locks one into certain positions. For example, this requires a method of communication between the data plane and the control plane, it also means the state machine that represents the WAN Connector becomes more complex, and complexity always brings with it a greater danger for hidden mistakes and fallacies. The benefit is that the user plane function does not need any complex decision making logic, thus simplifying its internal architecture. Further, these separate components can then be deployed at different locations, and scaled up or out with greater ease.
 
 %%=========================================
-\section{Architectural Components Required for Deterministic Multipath Backhaul in a 5G Campus Environment}
-\label{sec:approach:req}
+\section{Components Required for Deterministic Multipath Backhaul in a 5G Campus Environment}
+\label{sec:approach:comp}
 
-Determinism, in a networking context, refers to the ability of a network to supply specific QoS requirements with extremely high degrees of certainty. IP flows and applications running in these networks are assured they will experience bounded latency, jitter, and packet loss. To this extent, the Determinsitic Networking specification (also called DetNet) is a specification with recommendations for how to achieve determinism. However it does not define determinism. A network which does not fully comply to these specifications may still call itself determinstic (but it may not say it is a DetNet). Since this thesis aims to provide determinstic backhaul, it is not required to follow the DetNet specifications in any form. Though, it does make sense to consider what solutions they have proposed for determinism, since ultimately the goals are the same. In this section, therefore, the DetNet specifications will be used as a source of inspiration to gleam ideas, but not as an absolute source of truth.
+Determinism, in a networking context, refers to the ability of a network to supply specific QoS requirements with extremely high degrees of certainty. IP flows and applications running in these networks are assured they will experience bounded latency, jitter, and packet loss. To that extent, the Deterministic Networking specification (also called DetNet specification) is a specification with recommendations for how to achieve determinism. However it does not define determinism. A network which does not fully comply to these specifications may still call itself determinstic (but it may not say it is a DetNet). Since this thesis aims to provide determinstic backhaul, it is not required to follow the DetNet specifications in any form. Though, it does make sense to consider what solutions they have proposed for determinism, since ultimately the goals are the same. In this section, therefore, the DetNet specifications will be used as a source of inspiration for ideas, but not as an absolute source of truth.
 
-Deterministic networks have been discussed in the previous chapter. In order to guarantee determinism the IETF DetNet working group has proposed an architecture for determinism over IP networks \cite{detnet-arch}. Their specification identifies four key mechanisms for guaranteeing the determinism of a flow: 1) elimination of contention loss, 2) jitter reduction, 3) service protection, and 4) explicit routes. Since the 5G campus environment may need to use the infrastructure of other operators this rules out the ability to use explicit routes. A key difference between deterministic networks and 5G campus backhaul networks is that the operator may not control all the links between nodes, and that there are only two nodes in the network that are definitely under the administrator's control- the WAN Connectors at the core and the edge. In such a scenario the problem is less like a network and more like a client - server application with multiple paths between the client and the server.
+Deterministic networks have been discussed in the background chapter. In order to guarantee determinism the Internet Engineering Task Force (IETF) DetNet working group has proposed an architecture for determinism over IP networks \cite{detnet-arch}. Their specification identifies four key mechanisms for guaranteeing the determinism of a flow: 1) elimination of contention loss, 2) jitter reduction, 3) service protection, and 4) explicit routes. Since the 5G campus environment may need to use the infrastructure of other operators this rules out the ability to use explicit routes. A key difference between deterministic networks and 5G campus backhaul networks is that the operator may not control all the links between nodes, and that there are only two nodes in the network that are definitely under the administrator's control- the WAN Connectors at the core and the edge. In such a scenario the problem is less like a network and more like a client - server application with multiple paths between the client and the server.
 
 \subsection{Elimination of Contention Loss and Bufferbloat}
 
-In order to prevent packet loss due to buffer overflows, and, just as importantly, to prevent high latencies due to bufferbloat \cite{gettys2011bufferbloat} or excessive queuing, contention between flows must be carefully managed. A greedy flow, which uses too much bandwidth, or the presence of too many flows, whose cumulative bandwidth demands exceed the link's capabilities, will have negative effects on all the flows running over the link.
+In order to prevent packet loss due to buffer overflows, and, just as importantly, to prevent high latencies due to bufferbloat or excessive queuing, contention between flows must be carefully managed. A greedy flow, which uses too much bandwidth, or the presence of too many flows, whose cumulative bandwidth demands exceed the link's capabilities, will have negative effects on all the flows running over the link.
 
-Elimination of contention loss can be achieved by using a traffic shaper and/or rate limiter, and the ingress to any DetNet domain \textbf{must} apply such a function. For the WAN Connector therefore a traffic shaper must also be applied to the traffic on ingress, from the RAN, before it is sent across the backhaul links. Since the implementation of a traffic shaper is beyond the scope of this thesis, an existing solution must be used. The traffic control subsystem in the linux kernel (TC) provides several implementations of different algorithms for both rate limiting and traffic shaping. Some of these algorithms have already been discussed in the previous section. For the purposes of this solution several algorithms were considered: Hierarchical Token Bucket (HTB), Hierarchical Fair Service Curve (HFSC) \cite{stoica1997hierarchical}, Time Aware Prioriy Queueing (taprio), Common Applications Kept Enhanced (CAKE) \cite{hoiland2018piece}, and Fair Queuing with Controlled Delay (FQ\_CoDel).
+Elimination of contention loss can be achieved by using a traffic shaper and/or rate limiter, and the ingress to any DetNet domain \textbf{must} apply such a function. Therefore a traffic shaper must also be applied to the ingress traffic entering the WAN Connector, from the RAN, before it is sent across the backhaul links. Since the implementation of a traffic shaper is beyond the scope of this thesis, an existing solution must be used. The traffic control subsystem in the linux kernel (TC) provides several implementations of different algorithms for both rate limiting and traffic shaping. Some of these algorithms have already been discussed in the previous section. For the purposes of this solution several algorithms were considered: Hierarchical Token Bucket (HTB), Hierarchical Fair Service Curve (HFSC) \cite{stoica1997hierarchical}, Time Aware Priority Queuing (taprio), Common Applications Kept Enhanced (CAKE) \cite{hoiland2018piece}, and Fair Queuing with Controlled Delay (FQ\_CoDel).
 
-For HTB and HFSC, due to the implementation of these algorithms in the linux tc subsystem, integrating them within the context of this solution would require filters for each flow. This is not necessarily a hindrance yet, however it would introduce additional overhead upon the creation and/or addition of each new flow. Perhaps more importantly, the implementation of the HTB algorithm provides no means for fair queuing. This means that while it is not possible for greedy and/or malicious flows to use up the bandwidth of other flows because HTB guarantees bandwidth, the greedy flows can cause other flows to experience higher latency because it does not guarantee delay. The HFSC algorithm improves on this by offering both bandwidth and delay guarantees. However this makes it far more difficult to configure, and would require precise calculation of the service curve for each new flow.
+For HTB and HFSC, due to the implementation of these algorithms in the linux tc subsystem, integrating them within the context of this solution would require filters for each flow. This is not yet necessarily a hindrance, however it would introduce additional overhead upon the creation and/or addition of each new flow. Perhaps more importantly, the implementation of the HTB algorithm provides no means for fair queuing. This means that while it is not possible for greedy and/or malicious flows to use up the bandwidth of other flows because HTB guarantees bandwidth, the greedy flows can cause other flows to experience higher latency because it does not guarantee delay. The HFSC algorithm improves on this by offering both bandwidth and delay guarantees. However this makes it far more difficult to configure, and would require precise calculation of the service curve for each new flow.
 
-Another feasible option available in linux TC would be the time aware priority queuing (taprio). This queuing discipline provides scheduled gates for specific traffic classes. It could be used to schedule flows according to their requirements and/or priorities, and thus provide a form of prioritization, and, to an extent, traffic shaping. Flows can be assigned different windows and congestion due to a greedy flow is avoided if it is scheduled for a different window. However one issue is that taprio fails to provide fair queuing, and thus would need to be configured and possibly adapted as new flows are added and removed, depending on their priority. Greedy flows of the same priority would have to fight each other to use the bandwidth available in their assigned window.
+Another feasible option available in linux TC would be time aware priority queuing (taprio). This queuing discipline provides scheduled gates for specific traffic classes. It could be used to schedule flows according to their requirements and/or priorities, and thus provide a form of prioritization, and, to an extent, traffic shaping. Flows can be assigned different windows, and congestion due to a greedy flow is avoided if the greedy flow is scheduled for a different window. However one issue is that taprio fails to provide fair queuing. Thus it would need to be configured, and possibly adapted, as new flows are added and removed, depending on their priority. Flows of the same priority would have to compete with each other to use the bandwidth available in their assigned window.
 
-Lastly there are FQ\_CoDel and CAKE. Both provide fair queuing as well as active queue management, which means flows are less likely to experience loss due to congestion, particularly congestion caused by one particularly greedy flow. Since the CAKE algorithm was originally designed for routers in WLAN networks, and these are loosely analogous to a 5G campus network (consider the User Equipment as the Stations, and the Base Station as the Access Point), it makes it an attractive choice. CAKE also allows the use of 8 different priority tins, which fits well with the nature of 5G traffic, where different flows have different priorities. Finally, on a practical level, the implementation of CAKE in the linux kernel uses the kernel's "skb\_flow\_dissector" which exposes a hook point for eBPF programs \footnote{https://www.kernel.org/doc/html/v5.1/networking/bpf\_flow\_dissector.html\#overview}. Specifically within a 5G context, this could allow one to attach an eBPF program to allow CAKE to peek inside of GTP tunnels, and differentiate the flows within them. For all the other algorithms mentioned so far, all of the GTP packets would appear to belong to the same IP flow, and thus none of these algorithms would work at all if the traffic is arriving in a GTP tunnel. This is ultimately the strongest case that can be made for any of the options listed so far. TC does have one other algorithm which hooks into the "skb\_flow\_dissector", namely the Choose and Keep Scheduler (CHOKe) \cite{pan2000choke}, which does perform active queue management, however does not provide fair queuing. This means that while it manages buffers in order to prevent them from filling up, it does not guarantee different flows a fair share of the bandwidth, which can still lead to flows experiencing increased delay due to other greedy flows. In appendix \ref{appendix:patch} a patch is given which can be used to create an eBPF program which hooks into the "skb\_flow\_dissector" and removes GPT headers. By loading this eBPF program, the CAKE traffic shaper will also be able to function on packets obscured by GTP.
+Lastly there are FQ\_CoDel and CAKE. Both provide fair queuing as well as active queue management, which means flows are less likely to experience loss due to congestion, particularly congestion caused by one particularly greedy flow. Since the CAKE algorithm was originally designed for routers in WLAN networks, and these are loosely analogous to a 5G campus network (consider the UE's as the Stations, and the Base Station as the Access Point), it makes it an attractive choice. CAKE also allows the use of 8 different priority tins, which fits well with the nature of 5G traffic, where different flows have different priorities. Finally, on a practical level, the implementation of CAKE in the linux kernel uses the kernel's "skb\_flow\_dissector" which exposes a hook point for eBPF programs \footnote{https://www.kernel.org/doc/html/v5.1/networking/bpf\_flow\_dissector.html\#overview}. Specifically within a 5G context, one could attach an eBPF program that allows CAKE to peek inside of GTP tunnels, and differentiate the flows within them. For all the other algorithms mentioned so far, all of the GTP packets would appear to belong to the same IP flow, and thus none of these algorithms would work at all if the traffic is arriving in a GTP tunnel. This is ultimately the strongest case that can be made for any of the options listed so far. TC does have one other algorithm which hooks into the "skb\_flow\_dissector", namely the Choose and Keep Scheduler (CHOKe) \cite{pan2000choke}, which does perform active queue management, however does not provide fair queuing. This means that while it manages buffers in order to prevent greedy flows from filling them up, it does not guarantee different flows a fair share of the bandwidth, which can still lead to flows experiencing increased delay due to other greedy flows. Appendix \ref{appendix:patch} includes a patch which can be used to create an eBPF program which hooks into the "skb\_flow\_dissector" and removes GPT headers. By loading this eBPF program, the CAKE traffic shaper will also be able to function on packets obscured by GTP.
 
 \subsection{Jitter Reduction and Latency Guarantees}
 
@@ -98,13 +123,37 @@ The goal of this thesis is of course to use the link and/or path selection to pr
 \subsection{Summary of Necessary Features}
 
 
-Looking back on the previous subsections, the following points (in no particular order of priority) were identified as mandatory for a deterministic backhaul solution: 1) traffic shaping, 2) path selection according to jitter and latency requirements, 3) service protection (i.e. via packet duplication), 4) packet ordering and de-duplication, and 5) time synchronization. The ways in which these can be addressed, or quite simply the way in which they were implemented, will be discussed in the following section
+Looking back on the previous subsections, the following points (in no particular order of priority) are identified as mandatory for a deterministic backhaul solution: 1) traffic shaping, 2) path selection according to jitter and latency requirements, 3) service protection (i.e. via packet duplication), 4) packet ordering and de-duplication, and 5) time synchronization. Discussion of the ways in which these point can be addressed, or how they were implemented, takes place in the following section.
+
+
+\subsection{Solution Architecture}
+
+\begin{figure}[h]
+    \centering
+        \includegraphics[width=\textwidth]{fig/be-architecture.png}
+        \caption{Internal Architecture of the WAN Connector}
+        \label{fig:arch}
+\end{figure}
+
+The internal architecture of the WAN connector is shown in Figure \ref{fig:arch}. The connector is split into a control plane, which uses the algorithm in \ref{pof-alg} to choose which interfaces to forward on, and a data plane, which performs the forwarding, as well as any necessary buffering, re-ordering and/or de-duplication. The WAN connector also performs different tasks depending on whether it is the origin or termination of a flow. For example, the terminating node may be receiving duplicate packets on the other paths, and it must know to drop these. Additionally, the sender, can only store statistics about how many bytes it has sent, and on what paths. The receiver is able to use the information contained in the packets it has received to construct a complete picture about the nature of the path - its jitter, latency and also packet loss. The link selector in the control plane can then use this information to make its decisions. When deploying the WAN Connector there is only one Control Plane unit (the controller), and two Data Plane instances. This is because it would be redundant to deploy an additional controller for the remote data plane instance. In the event that each link fails then the remote controller cannot help, even though it can detect it, and if at least one link remains up then the core controller will switch to using that link and can inform the data plane unit to do the same with the traffic it is forwarding.
+
+One part which is missing from this diagram is the traffic shaper. That is because it is not connected to the control and the data plane, rather it is meant to be installed alongside them. Furthermore, it is important that the traffic shaper resides in the part of the network before the packets enter the WAN connector. If the deployment features a UPF in the edge network, it may make sense to place the traffic shaper before this as well. For the core, the traffic shaper will similarly need to be placed at the ingress point at which packets reach the WAN connector.
+
+
+
+%%=========================================
+%%=========================================
+%%=========================================
+\cleardoublepage
+\chapter{Implementation}
+\label{cha:impl}
+
+At this point, one can take the skeleton structure proposed in section \ref{sec:approach:plan} of the previous chapter, and superimpose the other requirements which were determined in section \ref{sec:approach:comp}. Combining these ideas yields the final implementation, which will be now be presented.
+
 
 %%=========================================
 \section{Overview of the WAN Connector's Features and Components}
 \label{sec:approach:arch}
-
-At this point, one can take the skeleton structure proposed in the first section, and superimpose the other requirements which were determined in the second section. Combining these ideas yielded the final implementation, which will be now be presented.
 
 \subsection{Path Selection Algorithm}
 
@@ -150,19 +199,6 @@ To be able to intelligently switch flows between paths, and to be able to know w
 Incoming packets need to be quickly mapped to their respective flows. It is common in network environments to perform flow hashing, in order to quickly lookup which flow incoming packets belong to. This approach makes sense here too. However, since 5G flow descriptions can apply to various IP and port ranges as well as matching based on the transport layer protocol it is not possible to hash an incoming flow and obtain the same hash as the flow description. Furthermore it is possible for a flow to match multiple different flow descriptions. In these cases the first matching flow description is taken. This implies some sort of ordered storage of flow descriptions will be required, as well as a method to quickly match packets to flows. The solution used here is to maintain a simple linked list of the known flow descriptions, and match packets to their flow descriptions, if the packet is unknown. For "known" packets, which have been matched to a flow description, these are hashed and stored in a table, alongside their flow descriptor and a list of paths on which the flow is supposed to be forwarded. This allows quick lookup for every subsequent packet, as well as making it simple to change which paths flows are meant to be forwarded on. One alternative to storing the flow descriptions in a linked list would be to store them in a tree, such as in \cite{tongaonkar2004fast}, sorted either by priority or ID or even by the hash value of the flow description. This method would provide a faster lookup of new, "unknown" packets, whose hashes don't yet match to a flow, but since new flows are not such a frequent event the additional complexity of implementing such a data structure may not be worth the gain in performance.
 
 It is important to make a good choice when selecting a hash function. Since the hashes used are only for the purpose of lookups it would not be recommendable to pick a hashing algorithm designed for use in cryptography. These algorithms are designed so that it is very difficult to reverse engineer the original value from the hash, and this may often make the computation of the hash more computationally intensive than when computing hash algorithms designed for looking up table entries. Lastly, for hashing algorithms it is desirable that they provide a healthy distribution, to reduce collisions. Collision reduction can also be affected by choice of hash table size- and in general it is usually recommended to use a prime number. In this implementation, the MurmurHash algorithm was chosen due to its strong performance for lookup-based hashing. Specifically, the MurmurHash3 \cite{appleby2012murmurhash3} version was chosen, and since it can generate 32 or 128 bit values - the exact sizes of IPv4 and IPv6 addresses - this simplifies the hashing implementation for IP flows. When a packet comes into the WAN connector it is hashed based on it's destination address, source address, destination port, source port, and finally the transport layer protocol number. If the packet was tunneled with a GTP header, the header is removed and the hash is performed on the tunneled packet, not on the GTP packet. If the hash does not match, the packets is compared to the list of existing flow descriptions. If the flow belongs to one of these descriptions then that decision is stored in the hash table.
-
-\subsection{Overview}
-
-\begin{figure}[h]
-    \centering
-        \includegraphics[width=\textwidth]{fig/be-architecture.png}
-        \caption{Internal Architecture of the WAN Connector}
-        \label{fig:arch}
-\end{figure}
-
-The internal architecture of the WAN connector is shown in Figure \ref{fig:arch}. The connector is split into a control plane, which uses the algorithm in \ref{pof-alg} to choose which interfaces to forward on, and a data plane, which performs the forwarding, as well as any necessary buffering, re-ordering and/or de-duplication. The WAN connector also performs different tasks depending on whether it is the origin or termination of a flow. For example, the terminating node may be receiving duplicate packets on the other paths, and it must know to drop these. Additionally, the sender, can only store statistics about how many bytes it has sent, and on what paths. The receiver is able to use the information contained in the packets it has received to construct a complete picture about the nature of the path - its jitter, latency and also packet loss. The link selector in the control plane can then use this information to make its decisions. When deploying the WAN Connector there is only one Control Plane unit (the controller), and two Data Plane instances. This is because it would be redundant to deploy an additional controller for the remote data plane instance. In the event that each link fails then the remote controller cannot help, even though it can detect it, and if at least one link remains up then the core controller will switch to using that link and can inform the data plane unit to do the same with the traffic it is forwarding.
-
-One part which is missing from this diagram is the traffic shaper. That is because it is not connected to the control and the data plane, rather it is meant to be installed alongside them. Furthermore, it is important that the traffic shaper resides in the part of the network before the packets enter the WAN connector. If the deployment features a UPF in the edge network, it may make sense to place the traffic shaper before this as well. For the core, the traffic shaper will similarly need to be placed at the ingress point at which packets reach the WAN connector.
 
 
 
