finish summary, intro, reqs, and design chapters

--- a/backmatter/00_acronyms.tex
+++ b/backmatter/00_acronyms.tex
@@ -31,6 +31,7 @@
 \item[NTN] Non Terrestrial Network
 \item[POEF] Packet Ordering and Elimination Function
 \item[POF] Packet Ordering Function
+\item[PTP] Precision Time Protocol
 \item[QoS] Quality of Service
 \item[RAN] Radio Access Network 
 \item[RTT] Round Trip Time
@@ -38,7 +39,7 @@
 \item[SCNE] Satellite Constellation Network Emulator
 \item[SCTP] Stream Transmission Control Protocol
 \item[TCP] Transmission Control Protocol
-\item[TC] Traffic Control
+\item[tc] Traffic Control
 \item[TSN] Time Sensitive Networking
 \item[UDP] User Datagram Protocol
 \item[UE] User Equipment
