--- a/frontmatter/summary.tex
+++ b/frontmatter/summary.tex
@@ -6,11 +6,11 @@
 \addcontentsline{toc}{section}{Abstract}
 \section*{Abstract}
 
-The dawn of 5G brings with it an increased focus on bespoke quality of service provisions for different applications. Backhaul that respects the quality of service requirements of the applications running on-site is a difficult task, especially for remote or emergency deployments, . The new space race, in Lower Earth Orbit (LEO), has created a new possibility for backhaul over LEO satellite constellations. For industrial 5G sites, often located outside of cities and without access to fibre, this transforms the backhaul challenge into a multipath question.
+The dawn of 5G brings with it an increased focus on bespoke quality of service provisions for different applications. Backhaul that respects the quality of service requirements of the applications running on-site is a difficult task, especially for remote or emergency deployments. The new space race in Lower Earth Orbit (LEO) has created a new possibility for backhaul over LEO satellite constellations. For industrial 5G sites, often located outside of cities and without access to fibre, this transforms the backhaul challenge into a multipath question.
 
-This thesis presents an investigation into the use of multiple paths to provide deterministic backhaul in a geographically distributed 5G Campus deployment. In the course of this document a design and an implementation are presented, that take a 5G flow's requirements and use knowledge collected about the available backhaul paths to calculate which path(s) to use, via a binary optimization equation. The proposed solution comprises both a control plane and a data plane component, as well as a traffic shaper. In addition, a deployment configuration designed specifically for use in geographically distributed Campus 5G Networks is described.
+This thesis presents an investigation into the use of multiple paths to provide deterministic backhaul in a geographically distributed 5G Campus deployment. In the course of this document a design and an implementation are presented that take a 5G flow's requirements and use knowledge collected about the available backhaul paths to calculate which path(s) to use, via a binary optimization equation. The proposed solution comprises both a control plane and a data plane component, as well as a traffic shaper. In addition, a deployment configuration designed specifically for use in geographically distributed Campus 5G Networks is described.
 
-The described solution is investigated with respect to its ability to deterministically provide various network characteristics to traffic flows which require them. This investigation is performed on a custom testbed which can emulate multiple links. The results do not present conclusive evidence for the solution's ability to provide determinism, but do show promise. The latency-based path switching is 80\% optimal, and this thesis' solution is able to reduce the experienced delay. It fails to reduce jitter for jitter-sensitive flows, and needs to compromise throughput in order to provide reduced packet loss. However it is able to provide lower packet loss than even the Optimal Single Path Oracle, via its use of path switching and packet replication.
+This thesis' solution is investigated with respect to its ability to deterministically provide various network characteristics to traffic flows which require them. This investigation is performed on a custom testbed which emulates multiple links. The results do not present conclusive evidence for the solution's ability to provide determinism, but do show promise. The latency-based path switching is 80\% optimal, and the implementation is able to reduce the experienced delay. It fails to reduce jitter for jitter-sensitive flows, and needs to compromise throughput in order to provide reduced packet loss. However it is able to provide lower packet loss than even the Optimal Single Path Oracle, via its use of path switching and packet replication.
 
 
 %%=========================================
@@ -18,18 +18,8 @@ The described solution is investigated with respect to its ability to determinis
 \addcontentsline{toc}{section}{Zusammenfassung}
 \section*{Zusammenfassung}
 
-
-%5G legt einen größeren Fokus auf die verschiedene Servicequalität die von besonderen Applikationen gebraucht werden wird. Ins besonders abgelegene oder aus Notfall errichtete 5G Netze stehen vor einen schweren Problem, Backhaul bereit zu stellen der die benötigte Netzwerkeigenschaften ihrer kritischen Applikationen respektiert (deterministischer Backhaul). Dank der wachsenden Verfügbarkeit von Verbindungen über LEO Satellitenkonstellationen wird das traditionelle Problem vom Backhaul jetzt eine Multipath Frage.
-
-%Diese Arbeit beschreibt und implementiert eine Lösung die, in 5G Campus Umgebungen, verschiedene ausgehende Pfade benutzen kann um 5G Flows einen deterministischen Backhaul bereit zu stellen. Hierzu wird eine Architektur entworfen, welche eine binäre Optimierungsgleichung löst um diese Entscheidung zu treffen, anhand von Daten die über die ausgehenden Pfaden gesammelt werden. Des weiteren verfügt die Lösung über geteilte Steuerungs und Daten-ebenen und einen Traffic Shaper, und es wird eine Konfiguration spezifisch für 5G Campus Netze vorgestellt.
-
-%Die vorgestellte Lösung, der "WAN Connector", wird dann in einem Testbed der entworfen worden ist um Multipath Szenarien zu Emulieren auf ihrer deterministischen Eigenschaften untersucht. Die Ergebnisse weisen leider nach dass die Lösung nicht kompletten Determinismus anbieten kann. Obwohl es in der Frage der Latenz nur 80\% Optimal agieren kann, schafft es, die Implementation dieser Arbeit, die Latenz insgesamt zu verringern. Den Jitter zu reduzieren gelingt nicht, und auch der Durchsatz von Flows die der WAN Connector für Paketverlust und Zuverlässigkeit optimiert wird extrem reduziert, dennoch ist es aber möglich die Paketverluste mehr zu verringern als sogar der Einzel-Pfad Orakel, durch die Nutzung von Pfad-wechsel und Replikation.
-
-
-%====================
-
 Mit der Verbreitung von 5G rückt die von speziellen Applikationen benötigte Servicequalität immer mehr in den Fokus. Insbesondere abgelegene oder für einen Notfall errichtete 5G Netze haben Probleme, einen geeigneten Backhaul bereitzustellen, der die benötigten Netzwerkeigenschaften der kritischen on-site Applikationen unterstützt. Durch die neue, stetig wachsende Verfügbarkeit der Verbindungen über LEO (Low Earth Orbit) Satellitenkonstellationen wird jetzt das traditionelle Problem vom Backhaul eine Multipath Frage.
 
-Diese Arbeit implementiert einen Ansatz der verschiedene ausgehende Pfaden benutzt und schlägt eine Lösung für die 5G Campus Umgebung vor, die für 5G Flows einen deterministischen Backhaul bereitstellt. Hierzu wird eine Architektur entworfen, die über ausgehende Pfade Daten sammelt, und anhand einer binäre Optimierungsgleichung Entscheidungen trifft. Zusätzlich bietet dieser Lösungsansatz geteilte Steuerungs und Datenebenen, sowie einen Traffic Shaper, und stellt eine Konfiguration spezifisch für 5G Campus Netze vor.
+Diese Arbeit implementiert einen Ansatz der verschiedene ausgehende Pfade benutzt und schlägt eine Lösung für die 5G Campus Umgebung vor, die für 5G Flows einen deterministischen Backhaul bereitstellt. Hierzu wird eine Architektur entworfen, die über ausgehende Pfade Daten sammelt, und anhand einer binären Optimierungsgleichung Entscheidungen trifft. Zusätzlich bietet dieser Lösungsansatz geteilte Steuerungs und Datenebenen, sowie einen Traffic Shaper, und stellt eine Konfiguration spezifisch für 5G Campus Netze vor.
 
-In einem Testbed, das Multipath Szenarien emuliert, wird diese Lösung, der sogenannte "WAN Connector", auf ihre deterministischen Eigenschaften untersucht. Die Ergebnisse weisen leider nach dass die Lösung keinen kompletten Determinismus anbieten kann. In der Frage der Latenz agiert die hier untersuchte und vorgeschlagene Methodik 80\% optimal, und schafft es die Latenz insgesamt zu verringern. Den Jitter zu reduzieren gelingt aber nicht, und auch der Durchsatz von Flows die für Paketverluste und Zuverlässigkeit optimiert werden wird extrem reduziert. Dennoch war es aber möglich die Paketverluste mehr zu verringern als sogar möglich wäre mit einen Orakel der Einzelne-Pfade auswählen kann, durch die Nutzung von Pfad-wechsel und Replikation.
+In einem Testbed, dass Multipath Szenarien emuliert, wird diese Lösung, der sogenannte "WAN Connector", auf ihre deterministischen Eigenschaften untersucht. Die Ergebnisse weisen leider nach dass die Lösung keinen kompletten Determinismus anbieten kann. In der Frage der Latenz agiert die hier untersuchte und vorgeschlagene Methodik 80\% optimal, und schafft es die Latenz insgesamt zu verringern. Den Jitter zu reduzieren gelingt aber nicht, und auch der Durchsatz von Flows, die für Paketverluste und Zuverlässigkeit optimiert werden, wird extrem reduziert. Dennoch war es möglich, durch die Nutzung von Pfad-wechsel und Replikation, die Paketverluste stärker zu verringern als es mit einen Orakel der Einzelne-Pfade auswählen kann möglich gewesen wäre.
