--- a/mainmatter/04_approach.tex
+++ b/mainmatter/04_approach.tex
@@ -39,7 +39,7 @@ With the flow identification, path management, and path selection all in place, 
 \chapter{Design}
 \label{cha:design}
 
-This chapter reviews the ways in which the requirements of the previous chapter can be met. It will discuss, the components needed in order to address the problem statement. It will try to discuss not only what decisions were made, but also, crucially, what decisions were \textit{not} made, and why. The first section will begin with the fundamental structure of the solution's architecture, thereafter an overview of the functionality required will be given. The Deterministic Networking specification will heavily inform these choices, and is referenced repeatedly throughout this chapter.
+This chapter reviews the ways in which the requirements of the previous chapter can be met. It will discuss the components needed in order to address the problem statement. It will try to discuss not only what decisions were made, but also, crucially, what decisions were \textit{not} made, and why. The first section will begin with the fundamental structure of the solution's architecture, thereafter an overview of the functionality required will be given. The Deterministic Networking specification will heavily inform these choices, and is referenced repeatedly throughout this chapter.
 
 
 %%=========================================
@@ -48,41 +48,45 @@ This chapter reviews the ways in which the requirements of the previous chapter 
 
 From the outset it was decided to use a Control-User Plane split. The packet processing and forwarding is performed in the user plane, and the control plane makes the high level decisions about which packets to send where, and in this case, on which outgoing interface to send them. The data plane is simple and only performs the time critical packet processing, and blindly follows the instructions of the control plane. This type of architecture is common in modern software-based networks, for example OpenFlow, the Evolved Packet Core (from LTE), and the 5G core all implement this kind of Control-Data-Plane split.
 
-However, this decision immediately locks one into certain positions. For example, this requires a method of communication between the data plane and the control plane, it also means the state machine that represents the WAN Connector becomes more complex, and complexity always brings with it a greater danger for hidden mistakes and fallacies. The benefit is that the user plane function does not need any complex decision making logic, thus simplifying its internal architecture. Further, these separate components can then be deployed at different locations, and scaled up or out with greater ease.
+However, this decision immediately locks one into certain positions. For example, this requires a method of communication between the data plane and the control plane, it also means that the state machine that represents the WAN Connector becomes more complex, and complexity always brings with it a greater danger for hidden mistakes and fallacies. The benefit is that the user plane function does not need any complex decision making logic, thus simplifying its internal architecture. Further, these separate components can then be deployed at different locations, and scaled up or out with greater ease.
 
 %%=========================================
 \section{Components Required for Deterministic Multipath Backhaul in a 5G Campus Environment}
 \label{sec:approach:comp}
 
-Determinism, in a networking context, refers to the ability of a network to supply specific QoS requirements with extremely high degrees of certainty. IP flows and applications running in these networks are assured they will experience bounded latency, jitter, and packet loss. To that extent, the Deterministic Networking specification (also called DetNet specification) is a specification with recommendations for how to achieve determinism. However it does not define determinism. A network which does not fully comply to these specifications may still call itself determinstic (but it may not say it is a DetNet). Since this thesis aims to provide determinstic backhaul, it is not required to follow the DetNet specifications in any form. Though, it does make sense to consider what solutions they have proposed for determinism, since ultimately the goals are the same. In this section, therefore, the DetNet specifications will be used as a source of inspiration for ideas, but not as an absolute source of truth.
+Determinism, in a networking context, refers to the ability of a network to supply specific QoS requirements with extremely high degrees of certainty. IP flows and applications running in these networks are assured bounded latency, jitter, and packet loss. To that extent, while the Deterministic Networking (DetNet) specification comes with several recommendations for how to achieve determinism it does not define determinism. A network which does not fully comply to these specifications may still call itself determinstic (but it may not say it is a DetNet). Since this thesis aims to provide determinstic backhaul, it is not required to follow the DetNet specifications in any form. Though, it does make sense to consider what solutions they have proposed for determinism, since ultimately the goals are the same. In this section, therefore, the DetNet specifications will be used as a source of inspiration for ideas, but not as an absolute source of truth.
 
-Deterministic networks have been discussed in the background chapter. In order to guarantee determinism the Internet Engineering Task Force (IETF) DetNet working group has proposed an architecture for determinism over IP networks \cite{detnet-arch}. Their specification identifies four key mechanisms for guaranteeing the determinism of a flow: 1) elimination of contention loss, 2) jitter reduction, 3) service protection, and 4) explicit routes. Since the 5G campus environment may need to use the infrastructure of other operators this rules out the ability to use explicit routes. A key difference between deterministic networks and 5G campus backhaul networks is that the operator may not control all the links between nodes, and that there are only two nodes in the network that are definitely under the administrator's control- the WAN Connectors at the core and the edge. In such a scenario the problem is less like a network and more like a client - server application with multiple paths between the client and the server.
+Deterministic networks have been discussed in the background chapter. In order to guarantee determinism the Internet Engineering Task Force (IETF) DetNet working group has proposed an architecture for determinism over IP networks \cite{detnet-arch}. Their specification identifies four key mechanisms for guaranteeing the determinism of a flow: 1) elimination of contention loss, 2) jitter reduction, 3) service protection, and 4) explicit routes. Since the 5G campus environment may need to use the infrastructure of other operators this rules out the ability to use explicit routes. A key difference between deterministic networks and 5G campus backhaul networks is that the operator may not control all the links between nodes, and that there are only two nodes in the network that are definitely under the administrator's control- the WAN Connectors at the core and the edge. In such a scenario the problem is less like a network and more like a client-server application with multiple paths between the client and the server.
 
 \subsection{Elimination of Contention Loss and Bufferbloat}
 
-In order to prevent packet loss due to buffer overflows, and, just as importantly, to prevent high latencies due to bufferbloat or excessive queuing, contention between flows must be carefully managed. A greedy flow, which uses too much bandwidth, or the presence of too many flows, whose cumulative bandwidth demands exceed the link's capabilities, will have negative effects on all the flows running over the link.
+Contention between flows must be carefully managed in order to prevent packet loss due to buffer overflows, and, just as importantly, to prevent high latencies due to bufferbloat or excessive queuing. A greedy flow, which uses too much bandwidth, or the presence of too many flows, whose cumulative bandwidth demands exceed the link's capabilities, will have negative effects on all the flows running over the link.
 
-Elimination of contention loss can be achieved by using a traffic shaper and/or rate limiter, and the ingress to any DetNet domain \textbf{must} apply such a function. Therefore a traffic shaper must also be applied to the ingress traffic entering the WAN Connector, from the RAN, before it is sent across the backhaul links. Since the implementation of a traffic shaper is beyond the scope of this thesis, an existing solution must be used. The traffic control subsystem in the linux kernel (TC) provides several implementations of different algorithms for both rate limiting and traffic shaping. Some of these algorithms have already been discussed in the previous section. For the purposes of this solution several algorithms were considered: Hierarchical Token Bucket (HTB), Hierarchical Fair Service Curve (HFSC) \cite{stoica1997hierarchical}, Time Aware Priority Queuing (taprio), Common Applications Kept Enhanced (CAKE) \cite{hoiland2018piece}, and Fair Queuing with Controlled Delay (FQ\_CoDel).
+Elimination of contention loss can be achieved by using a traffic shaper and/or rate limiter, and the ingress to any DetNet domain \textbf{must} apply such a function. Therefore a traffic shaper should be applied to the ingress traffic entering the WAN Connector from the RAN, before it is sent across the backhaul links. Since the implementation of a traffic shaper is beyond the scope of this thesis, an existing solution must be used. The traffic control subsystem in the linux kernel (tc) provides several implementations of different algorithms for both rate limiting and traffic shaping. For the purposes of this solution several algorithms were considered: Hierarchical Token Bucket (HTB), Hierarchical Fair Service Curve (HFSC) \cite{stoica1997hierarchical}, Time Aware Priority Queuing (taprio), Common Applications Kept Enhanced (CAKE) \cite{hoiland2018piece}, and Fair Queuing with Controlled Delay (FQ\_CoDel).
 
 For HTB and HFSC, due to the implementation of these algorithms in the linux tc subsystem, integrating them within the context of this solution would require filters for each flow. This is not yet necessarily a hindrance, however it would introduce additional overhead upon the creation and/or addition of each new flow. Perhaps more importantly, the implementation of the HTB algorithm provides no means for fair queuing. This means that while it is not possible for greedy and/or malicious flows to use up the bandwidth of other flows because HTB guarantees bandwidth, the greedy flows can cause other flows to experience higher latency because it does not guarantee delay. The HFSC algorithm improves on this by offering both bandwidth and delay guarantees. However this makes it far more difficult to configure, and would require precise calculation of the service curve for each new flow.
 
-Another feasible option available in linux TC would be time aware priority queuing (taprio). This queuing discipline provides scheduled gates for specific traffic classes. It could be used to schedule flows according to their requirements and/or priorities, and thus provide a form of prioritization, and, to an extent, traffic shaping. Flows can be assigned different windows, and congestion due to a greedy flow is avoided if the greedy flow is scheduled for a different window. However one issue is that taprio fails to provide fair queuing. Thus it would need to be configured, and possibly adapted, as new flows are added and removed, depending on their priority. Flows of the same priority would have to compete with each other to use the bandwidth available in their assigned window.
+Another feasible option available in linux tc would be time aware priority queuing (taprio). This queuing discipline provides scheduled gates for specific traffic classes. It could be used to schedule flows according to their requirements and/or priorities, and thus provide a form of prioritization, and, to an extent, traffic shaping. Flows can be assigned different windows, and congestion due to a greedy flow is avoided if the greedy flow is scheduled for a different window. However one issue is that taprio fails to provide fair queuing. Thus it would need to be configured, and possibly adapted, as new flows are added and removed, depending on their priority. Flows of the same priority would have to compete with each other to use the bandwidth available in their assigned window.
 
-Lastly there are FQ\_CoDel and CAKE. Both provide fair queuing as well as active queue management, which means flows are less likely to experience loss due to congestion, particularly congestion caused by one particularly greedy flow. Since the CAKE algorithm was originally designed for routers in WLAN networks, and these are loosely analogous to a 5G campus network (consider the UE's as the Stations, and the Base Station as the Access Point), it makes it an attractive choice. CAKE also allows the use of 8 different priority tins, which fits well with the nature of 5G traffic, where different flows have different priorities. Finally, on a practical level, the implementation of CAKE in the linux kernel uses the kernel's "skb\_flow\_dissector" which exposes a hook point for eBPF programs \footnote{https://www.kernel.org/doc/html/v5.1/networking/bpf\_flow\_dissector.html\#overview}. Specifically within a 5G context, one could attach an eBPF program that allows CAKE to peek inside of GTP tunnels, and differentiate the flows within them. For all the other algorithms mentioned so far, all of the GTP packets would appear to belong to the same IP flow, and thus none of these algorithms would work at all if the traffic is arriving in a GTP tunnel. This is ultimately the strongest case that can be made for any of the options listed so far. TC does have one other algorithm which hooks into the "skb\_flow\_dissector", namely the Choose and Keep Scheduler (CHOKe) \cite{pan2000choke}, which does perform active queue management, however does not provide fair queuing. This means that while it manages buffers in order to prevent greedy flows from filling them up, it does not guarantee different flows a fair share of the bandwidth, which can still lead to flows experiencing increased delay due to other greedy flows. Appendix \ref{appendix:patch} includes a patch which can be used to create an eBPF program which hooks into the "skb\_flow\_dissector" and removes GPT headers. By loading this eBPF program, the CAKE traffic shaper will also be able to function on packets obscured by GTP.
+Lastly there are FQ\_CoDel and CAKE. Both provide fair queuing as well as active queue management, which means flows are less likely to experience loss due to congestion, particularly congestion caused by one particularly greedy flow. Since the CAKE algorithm was originally designed for routers in home networks, and because WLAN networks are loosely analogous to a 5G campus network (consider the UE's as the Stations, and the Base Station as the Access Point), it makes it an attractive choice. CAKE also allows the use of 8 different priority tins, which fits well with the nature of 5G traffic, where different flows have different priorities. Finally, on a practical level, the implementation of CAKE in the linux kernel uses the kernel's "skb\_flow\_dissector" which exposes a hook point for eBPF programs \footnote{https://www.kernel.org/doc/html/v5.1/networking/bpf\_flow\_dissector.html\#overview}. Specifically within a 5G context, one could attach an eBPF program that allows CAKE to peek inside of GTP tunnels, and differentiate the flows within them. For all the other algorithms mentioned so far, all of the GTP packets would appear to belong to the same IP flow, and thus none of these algorithms would work at all if the traffic is arriving in a GTP tunnel. This is ultimately the strongest case that can be made for any of the options listed so far. TC does have one other algorithm which hooks into the "skb\_flow\_dissector", namely the Choose and Keep Scheduler (CHOKe) \cite{pan2000choke}, which does perform active queue management, however does not provide fair queuing. This means that while it manages buffers in order to prevent greedy flows from filling them up, it does not guarantee different flows a fair share of the bandwidth, which can still lead to flows experiencing increased delay due to other greedy flows. Appendix \ref{appendix:patch} includes a patch which can be used to create an eBPF program which hooks into the "skb\_flow\_dissector" and removes GPT headers. By loading this eBPF program, the CAKE traffic shaper will also be able to function on packets obscured by GTP.
 
 \subsection{Jitter Reduction and Latency Guarantees}
 
-In the Deterministic Networking Architecture specification it is recommended to adopt time synchronization as well as sending "Time of Execution" fields in the application packets, in order to achieve jitter reduction. For time synchronization, the PTP protocol may serve well, especially since there is an existing implementation- the linuxptp project \footnote{https://linuxptp.sourceforge.net/} -  which extends it to work over IP networks. As for the time of execution fields, it may be possible to place these in a GTP header, or to combine them with timestamping.
+In the DetNet Architecture specification it is recommended to adopt time synchronization as well as sending "Time of Execution" fields in the application packets, in order to achieve jitter reduction. For this approach, the Precision Time Protocol (PTP) protocol should serve to synchronize time between the two WAN Connectors. Especially since there is an existing implementation- the linuxptp project \footnote{https://linuxptp.sourceforge.net/} -  which extends PTP to work over IP networks. As for the time of execution fields, it is possible to place these in a GTP header, or to combine them with timestamping.
 
-Latency guarantees are not mentioned within the specification but they are important for the 5G campus setting. Specifically when backhaul options may include satellite links it becomes important to consider latencies. Additionally, in a multipath setting, latency can be a useful criteria for selecting between links, and guaranteeing latency becomes easier to do when it is possible to switch links should one of them start to experience greater latency than before.
+Methods to guarantee latency bounds are not mentioned within the specification but they are important for the multi-path setting. Specifically when backhaul options may include satellite links it becomes important to consider latencies. Additionally, in a multi-path environment, latency can be a useful criteria for selecting between links, and guaranteeing delay becomes easier to do when it is possible to switch away from a link that starts to exhibit increased latency.
 
 \subsection{Service Protection}
 
-In order to protect against equipment failure, it may be recommendable to perform packet replication and/or encoding. To address this the DetNet specification speaks of both duplication of flows, and network coding \cite{ahlswede2000network}. This can be a clever solution, however Network Coding requires control over and co-ordination between all the nodes in the network (like other parts of the Deterministic Networking specifications). Though to guard against equipment failure and/or packet loss, duplication does provide an option. So too, does forward error correction (FEC). Many FEC schemes work on a continuous stream of bytes, providing correction for bit errors, as opposed to correcting the loss of entire packets. There are schemes which address this, fountain codes - such as Raptor \cite{luby2007raptor}, which encode the data as being made up of multiple discrete symbols, and these symbols can be mapped directly to packets, thus allowing the Raptor FEC algorithm to protect against packet loss as opposed to just bit erros. Unfortunately the open source ecosystem surrounding fountain codes is not as developed as that around other FEC schemes, and, because of the complexity involved in implementing them efficiently, there are relatively few freely available projects or libraries which can be used to encode packets using such a scheme. For reference, \footnote{https://aff3ct.github.io/fec\_libraries.html} mainaints a list of C/C++ FEC libraries and none of them support the Raptor family of fountain codes (all other fountain codes incur high overhead). Even if it were more feasible to integrate FEC into the backhaul solution it bears questioning how much benefit it brings. FEC is very powerful in situations with consistently lossy links, however paths over the internet tend to experience loss in bursts, as opposed to at a consistent rate. To this extent it may make more sense to duplicate those flows which require a high degree of reliability. 
+In order to protect against equipment failure, it may be recommendable to perform packet replication and/or encoding. To address this the DetNet specification speaks of both duplication of flows, and coding schemes (e.g. Network Coding \cite{ahlswede2000network}, or Forward Error Correction (FEC)). Network Coding could have been a clever solution, however it would require controlling, or at the very least coordinating, all the nodes in the backhaul network (like other parts of the Deterministic Networking specifications), which makes it infeasible for this situation. However, to guard against equipment failure and/or packet loss, duplication does provide an option.
 
-%Flow duplication will mean a packet ordering and elimination function will be required, to eliminate those packets which arrive twice, and to re-order other ones.
+Another option would be FEC. The first problem, though, is that most FEC schemes work on a continuous stream of bytes, providing correction for bit errors, as opposed to correcting the loss of entire packets. Of course packet loss can be viewed as a large continuous sequence of bit errors, but this still places strenuous demands on the encoding scheme. There are schemes which address this issue; fountain codes, such as Raptor \cite{luby2007raptor} encode the data as multiple discrete symbols. These symbols can be mapped directly to packets, thus protecting against packet loss as opposed to just bit errors.
 
-If one does choose to duplicate packets in order to achieve service protection, that means an elimination function is also required, as well as a packet ordering function. This is because multiple packets may arrive on one link before they arrive on the backup path. If a packet got lost on the faster path, it may still show up on the slower one and thus the packet forwarding needs to pause until the missing packet arrives. The DetNet specifications provide both a basic and an advanced Packet Ordering Function (POF) algorithm. This algorithm can be very easily adjusted to also perform the elimination of duplicate packets. The DetNet specification also clarifies how long one should wait to see if the missing packet arrives (or doesn't) - this value "cannot be smaller than the delay difference of the paths used by the flow" and is called the $POFMaxDelay$.
+Unfortunately the open source ecosystem surrounding fountain codes is not as developed as that around other FEC schemes, and, because of the complexity involved in implementing them efficiently, there are few freely available projects or libraries which can be used to encode packets using such a scheme. For reference, \footnote{https://aff3ct.github.io/fec\_libraries.html} maintains a list of C/C++ FEC libraries and projects, and none of them support the Raptor family of fountain codes (all other fountain codes incur high overhead).
+
+Even if it were more feasible to integrate FEC into the backhaul solution it bears questioning how much benefit this would bring. FEC is very powerful in situations with consistently lossy links, however paths over the internet tend to experience loss in bursts, not at a consistent rate. To this extent, it may make more sense to duplicate those flows which require a high degree of reliability. This avoids the overhead of forward error encoding, and the duplication ensures that when there are bursts of packet loss they are smoothed over.
+
+If one does choose to duplicate packets in order to achieve service protection, that means an elimination function is also required, as well as a packet ordering function. This is because multiple packets may arrive on one link before they arrive on the other one. If a packet got lost on the faster path, it may still show up on the slower one and thus the packet forwarding needs to pause until the missing packet arrives. The DetNet specifications provide both a basic and an advanced Packet Ordering Function (POF) algorithm \cite{ietf-detnet-pof-08}. This algorithm can be easily adjusted to also perform the elimination of duplicate packets. The DetNet specification also clarifies how long one should wait to see if a missing packet arrives. This value "cannot be smaller than the delay difference of the paths used by the flow" and is called the $POFMaxDelay$.
 
 \begin{algorithm}[H]
 \label{pof-alg}
@@ -110,21 +114,20 @@ $POFLastSent_f = seq\_num$\;
 \caption{Basic POF Algorithm Adjusted for De-Duplication}
 \end{algorithm}
 
-The algorithm shown in \ref{pof-alg} is the Basic POF algorithm, with a single adjustment made on line 5 to make sure that an incoming packet's sequence number is not lower than the next one we are expecting, in order to properly eliminate duplicates. The algorithm's \textbf{if/else} logic in this representation could be unified in a cleaner way, but it was done this way specifically because it thus requires just one extra line (line 5) to be changed from the DetNet specifications POF algorithm, and that one change suffices to make it a Packet Ordering and Elimination Function.
+The algorithm shown in \ref{pof-alg} is the Basic POF algorithm, with a single addition in line 5. The addition was made to make sure that an incoming packet's sequence number is not lower than the next one we were expecting, in order to properly eliminate duplicates. The algorithm's \textbf{if/else} logic in this representation could be unified in a cleaner way, but it was done this way specifically because it thus requires just one extra \textit{if} condition (in line 5) to be added to the DetNet specification's POF algorithm, and that one change suffices to make it a Packet Ordering \textit{and Elimination} Function (POEF).
 
 \subsection{Multipath Considerations}
 
-While the previous subsections have all considered requirements for determinism in an IP network, the issue of multipathing still remains. For a component which is backhauling over multiple links in an IP networks this means link and/or path selection is required. Traditionally, routers select links primarily based on their ability to route the packet to the destination, and secondarily based on various metrics, which can be defined by the administrator. For the WAN Connector's scenario routing considerations are not made- it's purpose is to backhaul the traffic from the RAN / Edge to the Core, where the network's own internet gateway can perform the routing.
+While the previous subsections have all considered requirements for determinism in an IP network, the issue of multipathing still remains. For a component which is backhauling over multiple links in an IP networks this means link and/or path selection is required. Traditionally, routers select links primarily based on their ability to route the packet to the destination, and secondarily based on various metrics, which can be defined by the administrator. Routing considerations are not made for the WAN Connector's scenario- it's purpose is to backhaul the traffic from the remote Campus Network deployment to the Core, where the network's own internet gateway can then perform the routing.
 
-At this point it is crucial to differentiate, again, between multihoming and multipathing. Multihomed hosts are able to select one of many links for their outgoing traffic's destination. In multipathing the same link may lead to multiple paths to \textit{different} destinations. When two multihomed hosts communicate with eachother multiple different paths are opened up. Multipathing over the internet requires complex data collection about all the routers in between the source and the destination, see \cite{ganichev2010yamr} for an example of such an implementation. This is because multipathing over the internet needs to choose paths with maximally edge-disjoint paths to achieve the best reliability, as well as maximally vertex-disjoint paths in order to reduce the load across all nodes on the path.
+At this point it is crucial to differentiate, again, between multihoming and multipathing. Multihomed hosts are able to select one of many links for their outgoing traffic's destination. In multipathing the same link may lead to multiple paths to \textit{different} destinations. When two multihomed hosts communicate with each other multiple different paths are opened up. Multipathing over the internet requires complex data collection about all the links in between the source and the destination, see \cite{ganichev2010yamr} for an example of such an implementation. This is because multipathing over the internet needs to choose paths with maximally edge-disjoint paths to achieve the best reliability, as well as maximally vertex-disjoint paths in order to reduce the load across all nodes on the path.
 
-The goal of this thesis is of course to use the link and/or path selection to provide determinism for the flows being backhauled. To this extent then, the link selection algorithm must attempt to forward flows over paths which can provide at worst the maximum allowed latency and jitter, as well as meeting the minimum reliability. Here it is worth noting that while duplication cannot really be used to guarantee latency, it can be used to improve reliability since a flow which is duplicated across two paths is far less likely to experience packet loss.
+The goal of this thesis is to use the link and/or path selection to provide determinism for the flows being backhauled. To this extent, the link selection algorithm must attempt to choose paths which can provide lower latency and jitter than the maximum allowed values of a given flow, as well as meeting the flow's minimum reliability requirements. Another consideration for multipath backhaul environments is that it is also possible to duplicate flows across two links (unlike in traditional backhaul scenarios). It is worth noting that while duplication cannot reduce latency it can improve reliability, since a flow which is duplicated across two paths is far less likely to experience packet loss.
 
 \subsection{Summary of Necessary Features}
 
 
-Looking back on the previous subsections, the following points (in no particular order of priority) are identified as mandatory for a deterministic backhaul solution: 1) traffic shaping, 2) path selection according to jitter and latency requirements, 3) service protection (i.e. via packet duplication), 4) packet ordering and de-duplication, and 5) time synchronization. Discussion of the ways in which these point can be addressed, or how they were implemented, takes place in the following section.
-
+Looking back on the previous subsections, the following points (in no particular priority) are identified as mandatory for a deterministic backhaul solution: 1) traffic shaping, 2) path selection according to jitter and latency requirements, 3) service protection (i.e. via packet duplication), 4) packet ordering and de-duplication, and 5) time synchronization. Discussion of the ways in which these point are addressed, or how they are implemented, takes place in the following chapter.
 
 \subsection{Solution Architecture}
 
@@ -135,9 +138,11 @@ Looking back on the previous subsections, the following points (in no particular
         \label{fig:arch}
 \end{figure}
 
-The internal architecture of the WAN connector is shown in Figure \ref{fig:arch}. The connector is split into a control plane, which uses the algorithm in \ref{pof-alg} to choose which interfaces to forward on, and a data plane, which performs the forwarding, as well as any necessary buffering, re-ordering and/or de-duplication. The WAN connector also performs different tasks depending on whether it is the origin or termination of a flow. For example, the terminating node may be receiving duplicate packets on the other paths, and it must know to drop these. Additionally, the sender, can only store statistics about how many bytes it has sent, and on what paths. The receiver is able to use the information contained in the packets it has received to construct a complete picture about the nature of the path - its jitter, latency and also packet loss. The link selector in the control plane can then use this information to make its decisions. When deploying the WAN Connector there is only one Control Plane unit (the controller), and two Data Plane instances. This is because it would be redundant to deploy an additional controller for the remote data plane instance. In the event that each link fails then the remote controller cannot help, even though it can detect it, and if at least one link remains up then the core controller will switch to using that link and can inform the data plane unit to do the same with the traffic it is forwarding.
+Finally, before the next chapter's discussion of the individual components, the design of the internal architecture of the WAN connector is shown. Figure \ref{fig:arch} illustrates a scenario where the control plane element of the WAN connector is deployed on the same host that is backhauling traffic to a remote WAN Connector. The diagram is shown for just a single one-way flow. The left side of the diagram is sending the traffic to the right side. Under normal operation there would also be traffic going the other way, and both the "remote" and the "edge" WAN Connector's data planes would be performing the tasks shown in the "sender" and "receiver" boxes. However this representation hopefully makes it easier to understand the tasks that the WAN Connectors will usually be performing simultaneously, without cluttering the image. 
 
-One part which is missing from this diagram is the traffic shaper. That is because it is not connected to the control and the data plane, rather it is meant to be installed alongside them. Furthermore, it is important that the traffic shaper resides in the part of the network before the packets enter the WAN connector. If the deployment features a UPF in the edge network, it may make sense to place the traffic shaper before this as well. For the core, the traffic shaper will similarly need to be placed at the ingress point at which packets reach the WAN connector.
+The WAN connector is split into a control plane, which uses the algorithm in \ref{pof-alg} to choose which interfaces to forward on, and a data plane, which performs the forwarding, as well as any necessary buffering, re-ordering and/or de-duplication. Statistics are reported from the user plane back to the control plane. The WAN connector performs different tasks depending on whether it is the origin or termination of a flow. For example, the terminating node may be receiving duplicate packets on the other paths, and it must know to drop these. Additionally, the sender, can only store statistics about how many bytes it has sent, and on what paths. The receiver, however, is able to use the information contained in the packets it has received to construct a complete picture about the nature of the path - its jitter, latency and also packet loss. The link selector in the control plane can then use this information to make its decisions. When deploying the WAN Connector there is only one Control Plane unit (the controller), and two Data Plane instances. This is because it would be redundant to deploy an additional controller for the remote data plane instance. In the event that each link fails then the remote controller cannot help, even though it can detect it, and if at least one link remains up then the core controller will switch to using that link and can inform the data plane unit to do the same. As has been mentioned before, the graphic depicts a situation in which one of the data plane instances is deployed on the same host as the control plane component. This does not need to be the case, the control plane could also be placed somewhere else entirely, however for the experiments performed in the evaluation chapter, and for the envisioned deployment, this co-location is most likely the easiest to administrate and deploy.
+
+One part which is missing from this diagram is the traffic shaper. That is because it is not connected to the control and the data plane, rather it is meant to be installed alongside them. Furthermore, it is important that the traffic shaper resides in the part of the network before the packets enter the WAN connector. If the deployment features a UPF in the edge network, it may make sense to place the traffic shaper before this as well. For the core, the traffic shaper will similarly need to be placed at the ingress point where packets first enter the core network.
 
 
 
@@ -176,7 +181,7 @@ In order to further avoid the combinatorial explosion the problem needs to be pa
 
 \subsection{Packet Ordering and Elimination Function}
 
-Since it is possible for flows to be duplicated across multiple paths, it becomes a necessity to have a packet ordering and elimination function. To be able to re-order and de-duplicate packets means that their sequence numbers need to be tracked. This thesis' implementation will track the sequence number on a per flow basis, using the GTP "sequence number" field. This thesis uses it's variation of the DetNet POF specification's Basic POF algorithm \cite{ietf-detnet-pof-08}, as presented in \ref{pof-alg}.
+Since it is possible for flows to be duplicated across multiple paths, it becomes a necessity to have a packet ordering and elimination function. To be able to re-order and de-duplicate packets means that their sequence numbers need to be tracked. This thesis' implementation will track the sequence number on a per flow basis, using the GTP "sequence number" field. This thesis uses it's variation of the DetNet POF specification's Basic POF algorithm, as presented in \ref{pof-alg}.
 
 \subsection{Internal Architecture}
 
